# pyplus

./: CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.py
pyplus/io/i/: __init__.py  _csv.py  _xls.py  _xlsx.py
pyplus/io/o/: __init__.py  _csv.py  _url.py
tests/: test_input.py
