[tool.poetry]
name = "pyplus"
version = "0.2.1"
description = "Um pacote de utilidades para uso interno."
authors = ["Enzo Santos <enzo.santos29@hotmail.com>"]
readme = "README.md"
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.11"
xlrd = "^2.0.1"
requests = "^2.31.0"
openpyxl = "^3.1.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.7.0"
black = "^23.11.0"
types-openpyxl = "^3.1.0.27"
types-requests = "^2.31.0.10"
logchange = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
